configFiles/kubernetes/auctionDataManager.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auctiondatamanager
spec:
  replicas: 1
  template:
    metadata:
      name: auctiondatamanager
      labels:
        app: auction
        tier: dm
        impl: auctiondatamanager
    spec:
      containers:
      - image: hrosenbe/weathervane-auctiondatamanager:1.1.0
        name: auctiondatamanager
        imagePullPolicy: IfNotPresent
