configFiles/kubernetes/configurationManager.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cm
spec:
  replicas: 1
  template:
    metadata:
      name: cm
      labels:
        app: auction
        tier: cm
        impl: WebConfig
    spec:
      containers:
      - image: hrosenbe/weathervane-cm:1.1.0
        name: cm
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 8888
          name: cmport
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: cm
spec:
  type: NodePort
  ports:
  - port: 8888
    name: cmport
  selector:
    app: auction
    tier: cm
    impl: WebConfig
