configFiles/kubernetes/postgresql.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: postgresql
spec:
  serviceName: postgresql
  replicas: 1
  template:
    metadata:
      name: postgresql
      labels:
        app: auction
        tier: data
        type: dbServer
        impl: postgresql
    spec:
      containers:
      - image: hrosenbe/weathervane-postgresql:1.1.0
        name: postgresql
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: postgresql-data
          mountPath: /mnt/dbData/postgresql
        - name: postgresql-logs
          mountPath: /mnt/dbLogs/postgresql
        ports: 
        - containerPort: 5432
          name: postgresqlport
          protocol: TCP
  volumeClaimTemplates:
  - metadata:
      name: postgresql-data
    spec:
      resources: 
        requests:
          storage: 20Gi
      accessModes:
      - ReadWriteOnce
      storageClassName: fast
  - metadata:
      name: postgresql-logs
    spec:
      resources: 
        requests:
          storage: 20Gi
      accessModes:
      - ReadWriteOnce
      storageClassName: fast
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  clusterIP: None
  ports:
  - port: 5432
    name: postgresqlport
  selector:
    app: auction
    tier: data
    type: dbServer
    impl: postgresql
