configFiles/kubernetes/rabbitmq.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  template:
    metadata:
      name: rabbitmq
      labels:
        app: auction
        tier: backend
        type: msgServer
        impl: rabbitmq
    spec:
      containers:
      - image: hrosenbe/weathervane-rabbitmq:1.1.0
        name: rabbitmq
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 5672
          name: nodeport
          protocol: TCP
        - containerPort: 25672
          name: peerport
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: NodePort
  ports:
  - port: 5672
    name: nodeport
  - port: 25672
    name: peerport
  selector:
    app: auction
    tier: backend
    type: msgServer
    impl: rabbitmq
