configFiles/kubernetes/nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  template:
    metadata:
      name: nginx
      labels:
        app: auction
        tier: web
        impl: nginx
    spec:
      containers:
      - image: hrosenbe/weathervane-nginx:1.1.0
        name: nginx
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 80
          name: httpport
          protocol: TCP
        - containerPort: 443
          name: httpsport
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    name: httpport
  - port: 443
    name: httpsport
  selector:
    app: auction
    tier: app
    impl: nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: www.weathervane
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
