configFiles/kubernetes/tomcat.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat
spec:
  replicas: 1
  template:
    metadata:
      name: tomcat
      labels:
        app: auction
        tier: app
        impl: tomcat
    spec:
      containers:
      - image: hrosenbe/weathervane-tomcat:1.1.0
        name: tomcat
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 8080
          name: httpport
          protocol: TCP
        - containerPort: 8443
          name: httpsport
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
  type: NodePort
  ports:
  - port: 8080
    name: httpport
  - port: 8443
    name: httpsport
  selector:
    app: auction
    tier: app
    impl: tomcat
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
spec:
  rules:
  - host: www.weathervane
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080
